--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "email-editor": {
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -88,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -119,6 +121,50 @@
           }
         }
       }
-    }},
-  "defaultProject": "email-editor"
+    },
+    "static-table": {
+      "projectType": "library",
+      "root": "projects/static-table",
+      "sourceRoot": "projects/static-table/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/static-table/tsconfig.lib.json",
+            "project": "projects/static-table/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/static-table/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/static-table/src/test.ts",
+            "tsConfig": "projects/static-table/tsconfig.spec.json",
+            "karmaConfig": "projects/static-table/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/static-table/tsconfig.lib.json",
+              "projects/static-table/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "email-editor",
+  "cli": {
+    "analytics": false
+  }
 }
